--- a/examples/index.html
+++ b/examples/index.html
@@ -1,7 +1,9 @@
 
 
 
-<svg version="1.1" width="300" height="200" xmlns="http://www.w3.org/2000/svg"><rect x="50" y="25" width="150" height="150" fill="orange" /><text x="100" y="100" font-size="35" text-anchor="middle" fill="blue">testing</text>
+<svg version="1.1" width="300" height="200" xmlns="http://www.w3.org/2000/svg"><circle cx="200" cy="150" r="100" fill="yellow" /><text x="100" y="100" font-size="50" text-anchor="middle" fill="purple">hel</text>
+
+
 
 
 
