--- a/examples/index.html
+++ b/examples/index.html
@@ -1,7 +1,9 @@
 
 
 
-<svg version="1.1" width="300" height="200" xmlns="http://www.w3.org/2000/svg"><circle cx="200" cy="150" r="100" fill="green" /><text x="100" y="100" font-size="50" text-anchor="middle" fill="orange">low</text></svg>
+<svg version="1.1" width="300" height="200" xmlns="http://www.w3.org/2000/svg"><circle cx="200" cy="150" r="100" fill="orange" /><text x="100" y="100" font-size="50" text-anchor="middle" fill="green">the</text></svg>
+
+
 
 
 
